# asp-caf-assignment

./: Makefile  architecture_diagram.md  pyproject.toml  stupidprogex.md  task1.md
.github/matchers/: mypy.json
.github/workflows/: lint.yml  tests.yml
caf/caf/: __main__.py  cli.py  cli_commands.py
libcaf/libcaf/: __init__.py  constants.py  diff.py  plumbing.py  ref.py  repository.py  tag.py
libcaf/src/: bind.cpp  caf.cpp  commit.h  hash_types.cpp  hash_types.h  like.h  object_io.cpp  object_io.h  tag.h  tree.h
tests/: conftest.py
tests/caf/cli_commands/: test_create_tag_command.py  test_delete_tag_command.py  test_diff_command.py  test_list_tags_command.py  test_status_command.py  test_tag_commands.py  test_tags_command.py  test_users_command.py
tests/libcaf/: test_common_ancestor.py  test_diff.py  test_objects.py  test_repository.py  test_repository_tags.py  test_status.py  test_tag.py  test_tags.py  test_users.py
